// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arbitrary json matches snapshot 1`] = `
Object {
  "flavor": "fudge",
}
`;

exports[`no callback matches snapshot 1`] = `
<button
  className="Button"
  onClick={undefined}
>
  Hi
</button>
`;

exports[`no callback matches snapshot 2`] = `
Object {
  "flavor": "fudge",
}
`;

exports[`with callback matches snapshot 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  Hi
</button>
`;
